2011-05-16  Rudi Schlatte  <rudi@constantly.at>

	* Removed autoconf support, updated installation instructions
	* Win9x/*: removed support for old-as-of-1999 versions of gnuplot
	* gnuplot.el (gnuplot-make-gnuplot-buffer): call `make-local-hook'
	only on xemacs (Emacs 24 doesn't have it)

May 17 2002 Bruce Ravel  <ravel@phys.washington.edu>
        * gnuplot.el: Version 0.5r
        * handle continuation lines better
	* C-c C-c now for comment region, C-c C-o for GUI
	* trim gnuplot buffer + customize vble controlling max buffer
	  length
	* Altered Makefile.in to install .el files along with .elc
	  files

May 30 2001 Bruce Ravel  <ravel@phys.washington.edu>
        * gnuplot.el: Version 0.5q
	* added font-lock bindings for words associated with plotting

Apr 15 2001 Bruce Ravel  <ravel@phys.washington.edu>
	* gnuplot.el: Version 0.5p
	* fixed the fix for the serious bug in how speedbar and
	  gnuplot-mode interact.  In the words of Bullwinkle, "This
	  time for sure!"

Jan  4 2001 Bruce Ravel  <ravel@phys.washington.edu>
	* gnuplot.el: Version 0.5n
	* fixed a serious bug in how speedbar and gnuplot-mode
	  interact 

Nov 29 2000 Bruce Ravel  <ravel@phys.washington.edu>
	* gnuplot.el: Version 0.5m
	* much better algorithm for determining gnuplot version number
	* add colorization and gui support for new commands in 3.8.
	* gui support for emf term.
	* gui support for new "set style" syntax.

Nov 16 2000 Bruce Ravel  <ravel@phys.washington.edu>
        * gnuplot.el: Version 0.5l
	* support for pm3d in gnuplot-gui and in plot options
	  insertions menu.
        * mentioned pm3d in gpelcard.
        * `gnuplot-negate-option' works with new syntax

Sep 22 1999  Bruce Ravel  <ravel@phys.washington.edu>
        * gnuplot.el: Version 0.5k
        * make `gnuplot-send-line-and-forward' skip over blank and
          comment lines as suggested by <SE>.
        * Jan 10 2000 Bound C-c C-j to `gnuplot-forward-script-line'.
